# DBMS_lab5

./: Cargo.toml  db.sql
auth-frontend/: package-lock.json  package.json
auth-frontend/src/: App.js
auth-frontend/src/components/: Login.js  Register.js
auth-frontend/src/services/: api.js
q1/: register.html
q2/: login.html
q3/register/: Cargo.toml  db.sql  readme.txt
q3/register/src/: main.rs
q3/register/src/auth/: mod.rs  register.rs
q4/: .env  Cargo.toml  db.sql  readme.md
q4/auth-frontend/src/: App.js
q4/src/: main.rs
q4/src/auth/: jwt.rs  login.rs  mod.rs  register.rs
src/: main.rs
src/auth/: jwt.rs  login.rs  mod.rs  register.rs
