[package]
name = "register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
dotenv = "0.15.0"
tokio = "1.32.0"
serde = "1.0.188"
serde_derive = "1.0.188"
tokio-postgres = "0.7.10"
bcrypt = "0.15.0"
actix-files = "0.6.2"